- Fixed bug #42629 (Dynamically loaded PHP extensions need symbols exported on MacOSX)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@242639 c90b9560-bf6c-de11-be94-00142212c4b1